<resources>
    <string name="app_name">restaurant-app</string>

    <!--    Frontend-Start    -->
    <string name="button_scanCode">QR-Code scannen</string>
    <string name="button_exampleTableLogin">Anmeldung mit Beispieltisch</string>
    <string name="message_scan">Bitte scannen Sie einen QR-Code</string>
    <string name="headline_menu">Speisekarte</string>

    <!--    Fehlermeldungen    -->
    <string name="toast_error">Ein Fehler ist aufgetreten</string>
    <string name="toast_error_no_data">Es sind noch keine Daten verfügbar</string>
    <string name="toast_error_no_example_table_found">Kein Beispieltisch gefunden!</string>
    <string name="toast_error_category_is_used">Diese Kategorie wird noch von Speisen/Getränken verwendet</string>
    <string name="toast_error_no_category_available">Bitte erstellen Sie zuerst eine Kategorie</string>
    <string name="toast_error_picture_upload">Ein Fehler beim Bild-Upload ist aufgetreten</string>
    <string name="toast_error_no_valid_qrcode">Ungültiger QR-Code</string>
    <string name="toast_error_permissions_missing">Bitte vergeben Sie die notwendigen Berechtigungen</string>
    <string name="email_empty">Email darf nicht leer sein</string>
    <string name="password_empty">Passwort darf nicht leer sein</string>
    <string name="firstName_empty">Vorname darf nicht leer sein</string>
    <string name="lastName_empty">Nachname darf nicht leer sein</string>
    <string name="street_empty">Straße darf nicht leer sein</string>
    <string name="zipCode_empty">PLZ darf nicht leer sein</string>
    <string name="city_empty">Stadt darf nicht leer sein</string>
    <string name="restaurantName_empty">Restaurantname darf nicht leer sein</string>
    <string name="ustId_empty">UstId darf nicht leer sein</string>
    <string name="pictureEmpty">Bild darf nicht leer sein</string>
    <string name="drinkName_empty">Das Getränk braucht einen Namen</string>
    <string name="drinkPrice_empty">Das Getränk braucht einen Preis</string>
    <string name="drinkDescription_empty">Ein Getränk ohne Beschreibung?</string>
    <string name="foodName_empty">Die Speise braucht einen Namen</string>
    <string name="foodPrice_empty">Die Speise braucht einen Preis</string>
    <string name="foodDescription_empty">Die Speise ohne Beschreibung?</string>
    <string name="tableNumber_empty">Ein Tisch ohne Nummer? Wie soll man den denn finden?</string>

    <!--    Verwaltungsübersicht    -->
    <string name="headline_overview">Verwaltung</string>
    <string name="view_users_button">Userverwaltung</string>
    <string name="view_user_profile_button">Profil bearbeiten</string>
    <string name="change_PW_button">Passwort ändern</string>
    <string name="view_categories_button">Kategorieverwaltung</string>
    <string name="view_drinks_button">Getränkeverwaltung</string>
    <string name="view_foods_button">Essensverwaltung</string>
    <string name="view_tables_button">Tischverwaltung</string>

    <!--    Verwaltungen    -->
    <string name="button_goToOverview">Zurück zur Übersicht</string>
    <string name="headline_category_list">Kategorieverwaltung</string>
    <string name="headline_category_detail">Kategorieübersicht</string>
    <string name="text_categoryname">Bezeichnung</string>
    <string name="dialog_delete_category">Die Kategorie wirklich löschen?</string>
    <string name="button_addNewCategory">Neue Kategorie anlegen</string>
    <string name="headline_drink_list">Getränkeverwaltung</string>
    <string name="headline_drink_detail">Getränkeübersicht</string>
    <string name="text_drinkname">Bezeichnung</string>
    <string name="text_drinkcategory">Kategorie</string>
    <string name="text_drinkprice">Preis</string>
    <string name="text_drinkdescription">Beschreibung</string>
    <string name="text_drinkpicture">Bild</string>
    <string name="dialog_delete_drink">Das Getränk wirklich löschen?</string>
    <string name="button_addNewDrink">Neues Getränk anlegen</string>
    <string name="headline_table_list">Tischverwaltung</string>
    <string name="text_generateQRCodeAgain">Sie können den QR-Code für diesen Tisch nochmals generieren (dieser ändert sich dabei nicht)</string>
    <string name="toast_genQR_fail">Fehler bei der Erstellung des QR-Codes</string>
    <string name="toast_genQR">Der QR-Code wurde nochmals erstellt</string>
    <string name="headline_table_detail">Tischübersicht</string>
    <string name="text_tableNo">Tischnummer</string>
    <string name="text_tableQR">QR-Code</string>
    <string name="dialog_delete_table">Den Tisch wirklich löschen?</string>
    <string name="button_generateQRCode">QR-Code nochmals generieren</string>
    <string name="button_addNewTable">Neuen Tisch anlegen</string>
    <string name="headline_food_list">Speisenverwaltung</string>
    <string name="headline_food_detail">Speisenübersicht</string>
    <string name="text_foodcategory">Kategorie</string>
    <string name="toast_no_picture_set">Bitte wählen Sie ein Bild aus</string>
    <string name="dialog_delete_food">Die Speise wirklich löschen?</string>
    <string name="button_addNewFood">Neue Speise anlegen</string>
    <string name="button_logout">Ausloggen</string>
    <string name="placeholderPicture">Hier klicken um Bild auszuwählen</string>
    <string name="shopingCart_heading">Warenkorb</string>
    <string name="shopingCart_finish_button">Abschicken</string>

    <!--    Userverwaltung    -->
    <string name="button_login">Login</string>
    <string name="button_register">Registrieren</string>
    <string name="headline_user_list">Userverwaltung</string>
    <string name="headline_user_detail">Userübersicht</string>
    <string name="view_user_button">Bearbeiten</string>
    <string name="button_update">Bearbeiten</string>
    <string name="button_delete">Löschen</string>
    <string name="button_save">Speichern</string>
    <string name="text_firstname">Vorname</string>
    <string name="text_lastname">Nachname</string>
    <string name="text_email">E-Mail-Adresse</string>
    <string name="text_street">Straße</string>
    <string name="text_zip">PLZ</string>
    <string name="text_city">Stadt</string>
    <string name="text_restaurantname">Restaurantname</string>
    <string name="text_tax_id">Ust-Id</string>
    <string name="text_is_admin">Öffentlich</string>
    <string name="headline_password_change">Passwort ändern</string>
    <string name="text_old_password">Altes Passwort</string>
    <string name="text_new_password">Neues Passwort</string>
    <string name="button_password_save">Ändern</string>
    <string name="toast_wrong_old_pw">Altes Passwort nicht korrekt</string>
    <string name="toast_no_permition">Keine Berechtigung</string>
    <string name="dialog_delete_user">Den Account wirklich löschen?</string>
    <string name="button_confirm">Ja, bitte!</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="registration_heading">Registration</string>
    <string name="text_password">Passwort</string>
    <string name="text_street_number">Straße, Hausnummer</string>
    <string name="text_login">Login</string>

    <!--  Speisekarte -->
    <string name="tab_food">Speisen</string>
    <string name="tab_drinks">Getränke</string>
    <string name="headline_menu_detail">Übersicht</string>
    <string name="button_add">Hinzufügen</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="text_menu_item_name">Bezeichnung</string>
    <string name="text_menu_item_price">Preis</string>
    <string name="text_menu_item_description">Beschreibung</string>
    <string name="text_menu_item_wish">Zusatzwünsche</string>
    <string name="text_menu_item_quantity">Anzahl</string>
    <string name="toast_item_added">Erfolgreich hinzugefügt</string>
    <string name="toast_error_min_amount_reached">Mindestmenge erreicht</string>
    <string name="toast_error_max_amount_reached">Maximalmenge erreicht</string>
    <string name="toast_orderPos_removed">Bestellung wurde aktualisiert</string>

    <!--  E-Mails -->
    <string name="email_subject">Neue Bestellung</string>
    <string name="email_beginning">Folgende Bestellung wurde aufgegeben:</string>
    <string name="email_item">Speise/Getränk: </string>
    <string name="email_quantity">Anzahl: </string>
    <string name="email_wish">Zusatzwünsche: </string>
    <string name="toast_email_sent">Deine Bestellung wurde versendet</string>
    <string name="back_to_menu">Zurück zur Speisekarte</string>
</resources>
